--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+body{
+  background-color: rgb(89 177 211 / 83%);
 }
+.App{
+  background-color: rgb(225 200 219 / 57%);
+  min-height: 500px;
+  width: 400px;
+  margin: 40px auto;
+  padding: 12px;
+  box-shadow: 1px 1px 6px 2px #363232;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#to-do-list input{
+  background-color: rgb(169 108 108 / 79%);
+  border: 0;
+  width: 220px;
+  height: 50px;
+  margin: 20px;
+  padding: 0 20px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+#to-do-list input::placeholder{
+  color: rgb(255, 245, 245);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#to-do-list input:focus{
+  outline: none;
+}
+#to-do-list button{
+  height: 50px;
+  width: 80px;
+  border-radius: 5px;
+  border: 0;
+  background-color:  rgb(104 57 57 / 69%);
+    color: aliceblue;
+  cursor: pointer;
 }
